@@ -523,6 +523,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>added #132 tabs detach + goto (outliner based). Only works if chrome keeps the <code>openerTabId</code>.</p>
 </li>
+<li>
+<p>fixed #134 disabled chrome url support</p>
+</li>
 </ol>
 </div>
 </div>
