@@ -8,13 +8,6 @@ link:index.html[Home]
 == How to install
 
 
-There are two releases:
-
-. the <<Google store version>> which does not work on chrome:// pages (due to chrome store limitation)
-. the <<ZIP version>> which works on chrome:// pages
-
-
-
 
 == ZIP version
 
@@ -27,11 +20,4 @@ There are two releases:
 NOTE: You can disable the yellow bar warning when starting chrome using `--disable-infobars`
 
 NOTE: On Vivaldi, a different flag is used. Check https://github.com/hbt/mouseless/issues/73
-
-
-== Google store version
-
-
-No google store version available. Mainly because most contributors are from github and google store version is more likely to generate support requests and reach the wrong audience. 
-It also requires additional branding + review to prevent confusion with cVim. 
 
