@@ -500,19 +500,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_how_to_install">How to install</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>There are two releases:</p>
-</div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>the <a href="#_google_store_version">Google store version</a> which does not work on chrome:// pages (due to chrome store limitation)</p>
-</li>
-<li>
-<p>the <a href="#_zip_version">ZIP version</a> which works on chrome:// pages</p>
-</li>
-</ol>
-</div>
+
 </div>
 </div>
 <div class="sect1">
@@ -560,15 +548,6 @@ On Vivaldi, a different flag is used. Check <a href="https://github.com/hbt/mous
 </td>
 </tr>
 </table>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_google_store_version">Google store version</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>No google store version available. Mainly because most contributors are from github and google store version is more likely to generate support requests and reach the wrong audience.
-It also requires additional branding + review to prevent confusion with cVim.</p>
 </div>
 </div>
 </div>
